BYPS-1: Java 12 Unterstützung erst mlg mit Eclipse 2019-06
Es fehlen die Project Facets im Eclipse-Patch für Java 12